build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/Regression/GitHub/1374.phpt.warn
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '1'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'incomplete'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	!
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
